--- a/testcode/nbproject/project.properties
+++ b/testcode/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=testcode
-main.class=Main.Testcode
+main.class=Tryouts.FirstProgram
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
