--- a/testcode/nbproject/project.properties
+++ b/testcode/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/testcode.jar
+dist.jar=${dist.dir}/WIX1002-22-23.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/testcode
+dist.jlink.output=${dist.jlink.dir}/WIX1002-22-23
 excludes=
 includes=**
 jar.compress=false
@@ -70,7 +70,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=testcode
+jlink.launcher.name=WIX1002-22-23
 main.class=Tryouts.FirstProgram
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
