--- a/testcode/nbproject/project.properties
+++ b/testcode/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=WIX1002-22-23
+application.vendor=PREDATOR HELIOS 300
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,62 @@ dist.jar=${dist.dir}/WIX1002-22-23.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/WIX1002-22-23
+endorsed.classpath=
 excludes=
+file.reference.hamcrest-core-1.3.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\hamcrest-core-1.3.jar
+file.reference.jcommon-1.0.23.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jcommon-1.0.8-junit.jar=D:\\Program Stuff\\jcommon-1.0.8\\jcommon-1.0.8-junit.jar
+file.reference.jcommon-1.0.8.jar=D:\\Program Stuff\\jcommon-1.0.8\\jcommon-1.0.8.jar
+file.reference.jcommon-xml-1.0.8.jar=D:\\Program Stuff\\jcommon-1.0.8\\jcommon-xml-1.0.8.jar
+file.reference.jfreechart-1.0.19-experimental.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-experimental.jar
+file.reference.jfreechart-1.0.19-swt.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.jfreesvg-2.0.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\jfreesvg-2.0.jar
+file.reference.junit-4.11.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\junit-4.11.jar
+file.reference.junit.jar=D:\\Program Stuff\\jcommon-1.0.8\\lib\\junit.jar
+file.reference.orsoncharts-1.4-eval-nofx.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\orsoncharts-1.4-eval-nofx.jar
+file.reference.orsonpdf-1.6-eval.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\orsonpdf-1.6-eval.jar
+file.reference.servlet.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\servlet.jar
+file.reference.swtgraphics2d.jar=D:\\Program Stuff\\jfreechart-1.0.19\\lib\\swtgraphics2d.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jcommon-1.0.8-junit.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jcommon-xml-1.0.8.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
+    ${libs.JavaFX19.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=
+javac.modulepath=\
+    ${file.reference.hamcrest-core-1.3.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-experimental.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jfreesvg-2.0.jar}:\
+    ${file.reference.junit-4.11.jar}:\
+    ${file.reference.orsoncharts-1.4-eval-nofx.jar}:\
+    ${file.reference.orsonpdf-1.6-eval.jar}:\
+    ${file.reference.servlet.jar}:\
+    ${file.reference.swtgraphics2d.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.jcommon-1.0.8-junit.jar}:\
+    ${file.reference.jcommon-1.0.8.jar}:\
+    ${file.reference.jcommon-xml-1.0.8.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
